@@ -1,3 +1,8 @@
+25 June 2014: Wouter
+	- Patches from Pavel Simerda:
+	  improve systemctl call.
+	  serialize script instances.
+
 23 June 2014: Wouter
 	- Patches from Pavel Simerda:
 	  Fixup for python2.
